--- a/templates/admin/header.htm
+++ b/templates/admin/header.htm
@@ -11,6 +11,7 @@
     <a href="$makeUrl('admin','index',{})">首页</a>
     <a href="$makeUrl('cms','list',{})">文章管理</a>
     <a href="$makeUrl('comment','list',{})">评论管理</a>
+     <a href="$makeUrl('proxyip','list',{})">代理IP管理</a>
     <a href="$makeUrl('admin','logout',{})" onclick="return confirm('确认退出？')">退出</a>
     <a href="$makeUrl('index')" target="_blank">网站首页</a>
 <div style="clear:both;"></div>
